--- a/.github/workflows/coverage_and_lint.yml
+++ b/.github/workflows/coverage_and_lint.yml
@@ -72,13 +72,4 @@ jobs:
 
       - name: Lint
         if: ${{ always() && steps.install-deps.outcome == 'success' }}
-        uses: github/super-linter/slim@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BRANCH: main
-          VALIDATE_ALL_CODEBASE: false
-          VALIDATE_PYTHON_BLACK: true
-          VALIDATE_PYTHON_ISORT: true
-          LINTER_RULES_PATH: /
-          PYTHON_ISORT_CONFIG_FILE: pyproject.toml
-          PYTHON_BLACK_CONFIG_FILE: pyproject.toml
+        uses: chartboost/ruff-action@v1
