--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,24 +11,59 @@ python = "^3.11"
 aiohttp = "*"
 asyncpg = "*"
 starlette = "*"
-uvicorn = "*"
+uvicorn = { version = "*", extras = ["standard"] }
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
 isort = "*"
 "asyncpg-stubs" = "*"
+ruff = "*"
 
 [tool.black]
-line-length = 120
-skip-string-normalization = true
+line-length = 125
+preview = true
 
-[tool.isort]
-profile = "black"
-lines_after_imports = 2
-line_length = 120
-combine_as_imports = true
-combine_star = true
+[tool.ruff]
+line-length = 125
+exclude = ["docs/extensions/*.py"]
+select = [
+    "C4",
+    "F",
+    "G",
+    "I",
+    "PTH",
+    "RUF",
+    "SIM",
+    "TCH",
+    "UP",
+    "W",
+    "PERF",
+    "ANN",
+]
+ignore = [
+    "F401",
+    "F402",
+    "F403",
+    "F405",
+    "PERF203",
+    "RUF001",
+    "RUF009",
+    "SIM105",
+    "UP034",
+    "UP038",
+    "ANN101",
+    "ANN102",
+    "ANN401",
+]
+[tool.ruff.isort]
+split-on-trailing-comma = true
+combine-as-imports = true
 
+[tool.ruff.flake8-annotations]
+allow-star-arg-any = true
+
+[tool.ruff.flake8-quotes]
+inline-quotes = "single"
 
 [tool.pyright]
 useLibraryCodeForTypes = true
